Fixed overlapping divs and added headbar

--- a/index.css
+++ b/index.css
@@ -22,7 +22,22 @@ li {
   font-family: 'Kaushan Script', cursive;
 }
 
-.navbar, .AboutMe {
+.headbar {
+  width: 100%;
+  background-color: white;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 180px;
+  z-index: 0;
+}
+
+.nonhead {
+  padding-top: 160px;
+}
+
+.navbar {
   width: 100%;
   height: 17px;
   border-bottom: 1px solid black;
@@ -58,15 +73,27 @@ li {
   margin-right: auto;
 }
 
+/*Div's will overlap each other*/
+/*
 .AboutMe {
+  position: absolute;
   text-align: center;
-  width: 100%;
 }
 
 .aboutme-header {
   width: 40%;
 }
 
+.MyProjects {
+  position: absolute;
+  text-align: center;
+}
+
+.ContactMe {
+  position: absolute;
+  text-align: center;
+}
+*/
 
 
 footer {
